--- a/assets/sass/components/_hero.scss
+++ b/assets/sass/components/_hero.scss
@@ -10,7 +10,7 @@
         height: 100%;
         background-image: linear-gradient(
           180deg,
-          rgba(0, 0, 0, 0.7) 20%,
+          rgba(0, 0, 0, 0.75) 20%,
           rgba(0, 0, 0, 0.3) 50%,
           rgba(0, 0, 0, 0.7) 80%,
           rgba(0, 0, 0, 0.8) 100%
@@ -47,6 +47,33 @@
         height: 100%;
         top: 0;
         left: 0;
+      }
+    }
+    .video-container {
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
+      video {
+        /* Make video to at least 100% wide and tall */
+        min-width: 100%;
+        min-height: 100%;
+
+        /* Setting width & height to auto prevents the browser from stretching or squishing the video */
+        width: auto;
+        height: auto;
+
+        /* Center the video */
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+      }
+      iframe {
+        width: 100%;
+        height: 100%;
       }
     }
   }
